Fix create quiz alignment

--- a/frontend/src/components/BackButton/BackButton.module.css
+++ b/frontend/src/components/BackButton/BackButton.module.css
@@ -1,4 +1,4 @@
 .back {
-  font-size: 4rem;
+  font-size: 3rem;
   background-color: transparent;
 }
